<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/activity_vertical_margin">
            <EditText
                android:id="@+id/searchpwmobile_etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/msg_checkMobile"
                android:background="@drawable/border"
                android:digits="0123456789"
                android:inputType="number"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16dp"
                android:text="@string/msg_inputMobileCode"/>
        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/searchpwmobile_btnSendAuthCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_sendAuthCode"
            android:textSize="@dimen/activity_fontSize"
            android:layout_margin="@dimen/activity_btn_margin"
            android:background="@color/primary"
            android:textColor="@color/white"
            android:onClick="onClick"/>
    </LinearLayout>

</LinearLayout>